--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "dependencies": {
     "three": "~0.85.2",
-    "stats.js": "~0.17.0"
+    "stats.js": "~0.17.0",
+    "dat.gui": "~0.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
